add cocker compose file